# MRA-AI-learning

./: .gitignore  README.md  Taskfile.yml  initial_prompt.json  main.py  package-lock.json  requirements.txt
MRA_V1/: .env  .env.local  README.md  Taskfile.yml  main.py  mydatabase.db  pyproject.toml
MRA_V1/backend/: catalog_manager.py  db.py  new_catalog_manager.py  openai_agent.py  schema.sql  training_creator.py  user_manager.py
MRA_V1/chat/: chat_manager.py
MRA_V1/compose/: docker-compose.yml
MRA_V1/data/: complete_training_json_prompt.txt  new_training_json_prompt.txt
MRA_V1/experimental/: whatsapp_inference.py
MRA_V1/prisma/: schema.prisma
MRA_V1/prisma/migrations/20250209141327_init/: migration.sql
MRA_V1/src/backend/: catalog_manager.py  openai_agent.py  training_creator.py  training_manager.py  user_manager.py
MRA_V1/src/chat/: chat_manager.py  complete_training_json_prompt.txt  new_training_json_prompt.txt  openai_agent.py  tools.py
MRA_V1/src/data/: complete_training_json_prompt.txt  new_training_json_prompt.txt
MRA_V1/src/front/: main.py
MRA_V1/tests/: test_training_creator.py  test_user_manager.py
MRA_V1/tests/backend/: test_training_creator.py  test_user_manager.py
backend/: .flake8  README.md  Taskfile.yml  catalog_manager.py  feedback_manager.py  main.py  pyproject.toml
backend/src/: main.py  training_creator.py  training_manager.py
backend/src/chat/: chat_manager.py  openai_agent.py  tools.py
backend/src/db/: training_manager.py  user_manager.py
backend/src/training/: training_creator.py
backend/tests/db/: test_training_creator.py  test_user_manager.py
(+82 files in other folders)
