[tool.poetry]
name = "MRA"
version = "0.1.0"
description = "Application Formation + Chatbot"
readme = "README.md"

authors = [
  "Colin", "Christian"
]
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"
openai = "^1.61.1"
toml = "^0.10.2"
prisma = "^0.15.0"
python-dotenv = "^1.0.1"
flask = "^2.0"
flask-cors = "^3.0"


[tool.poetry.scripts]
main = "src.main:main"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^6.0.0" 
black = "^23.3.0" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
